fixed homepage and other minor things.  Line spacing is still weird

--- a/about/about.css
+++ b/about/about.css
@@ -6,12 +6,12 @@
     align-items: center;
 
     height: auto;
-    max-width: 500px;
+    max-width: 50vw;
     margin: auto;
     background: none;
 }
 
 .logo {
-    width: 100%;
-    height: 100%;
+    width: 10vw;
+    height: 10vw;
 }
