--- a/common.css
+++ b/common.css
@@ -37,11 +37,11 @@
 
 .watermark {
     z-index: 0;
-    width: 600px;
-    height: 600px;
+    width: 50vw;
+    height: 50vw;
     position: fixed;
-    top: calc(50% - 300px);
-    left: calc(50% - 300px);
+    top: calc(50% - 25vw);
+    left: calc(50% - 25vw);
     opacity: 0.3;
 }
 
@@ -84,15 +84,20 @@
 .displaybox {
     display: block;
     position: relative;
-    max-width: 800px;
+    max-width: 50vw;
     height: auto;
-    padding: 1vw;
     margin: auto;
     margin-bottom: 5vw;
+    padding: 1vw;
 
     background: rgba(150, 150, 150, 0.8);
-    border-radius: 10px;
-    border: 10px solid white;
+    border-radius: 1vw;
+    border: 1vw solid white;
+}
+
+.textbox {
+    width: 100%;
+    height: 100%;
 }
 
 .textbox l1 {
@@ -100,7 +105,7 @@
     color: white;
     font-size: 2.3vw;
     font-weight: bold;
-    
+
 }
 .textbox l2 {
     font-family: 'Rubik';
