--- a/main.css
+++ b/main.css
@@ -1,15 +1,19 @@
 .slidebox {
-    background: rgb(225, 225, 225);
-    width: auto;
-    height: auto;
-    position: absolute;
-    left: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+
+    width: 100%;
+    height: 100%;
+    padding: 0;
+
+/*    left: 50%;
     top: 55%;
     -o-transform: translate(-50%, -50%);
     -webkit-transform: translate(-50%, -50%);
     -moz-transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);*/
 }
 
 .slides {
@@ -17,8 +21,8 @@
 }
 
 .slideImg {
-    width: 45vw;
-    height: 25vw;
+    width: calc(100% - 0vw);
+    height: calc(100% - 0vw);
 }
 
 .fade {
@@ -55,20 +59,24 @@
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    top: 50%;
     width: auto;
-    margin-top: -42px;
-    padding: 16px;
+    padding: 1.5vw;
     color: white;
     font-weight: bold;
-    font-size: 45px;
+    font-size: 2vw;
     transition: 0.6s ease;
     border-radius: 0 3px 3px 0;
+    text-decoration: none;
+
 }
 
 .next {
     right: 0;
     border-radius: 3px 0 0 3px;
+}
+
+.prev {
+    left: 0;
 }
 
 .prev:hover, .next:hover {
